--- a/site/guide/configuration/customize-your-dashboard.qmd
+++ b/site/guide/configuration/customize-your-dashboard.qmd
@@ -117,14 +117,14 @@ Retrieve a list of the latest model artifacts[^5] or recent activity.[^6]
 5. Select the type of widget you'd like to add:[^7]
 
     - **{{< fa cubes >}} Model Inventory View**
-    - **{{< fa warning >}} Model Findings View**
+    - **{{< fa warning >}} Model Artifacts View**
     - **{{< fa square-poll-vertical >}} Visualization**
     - **{{< fa table-cells-large >}} Other**
 
 6. On the modal that appears, configure the information retrieved by the widget: 
 
     - **Model Inventory View** — Select a **[view name]{.smallcaps}** then cick **Add Model Inventory View**.
-    - **Model Findings View** — Select a **[view name]{.smallcaps}** then cick **Add Model Findings View**.
+    - **Model Artifacts View** — Select a **[view name]{.smallcaps}** then cick **Add Model Artifacts View**.
     - **Analytics Visualization** — Select an **[analytics page]{.smallcaps}** and a **[visualization]{.smallcaps}** then click **Add Visualization**.
     - **Other** — Select one of the **[widgets]{.smallcaps}** then click **Add Widget**.
 
