--- a/site/guide/configuration/manage-permissions.qmd
+++ b/site/guide/configuration/manage-permissions.qmd
@@ -197,16 +197,16 @@ The following tables outline the default roles and stock permissions provided by
 | Read Doc | <input type="checkbox" disabled checked /> | <input type="checkbox" disabled checked /> | <input type="checkbox" disabled checked /> |
 : **Documentation** permissions {.hover tbl-colwidths="[40,20,20,20]"}
 
-#### Finding
+#### Artifact
 
 | Permission | Customer Admin | Developer | Validator |
 |---|:---:|:---:|:---:|
-| Delete Finding | <input type="checkbox" disabled checked /> | <input type="checkbox" disabled /> | <input type="checkbox" disabled /> |
-| Add Finding | <input type="checkbox" disabled checked /> | <input type="checkbox" disabled /> | <input type="checkbox" disabled checked /> |
-| Add Finding Comment | <input type="checkbox" disabled checked /> | <input type="checkbox" disabled checked /> | <input type="checkbox" disabled checked /> |
-| Update Finding | <input type="checkbox" disabled checked /> | <input type="checkbox" disabled /> | <input type="checkbox" disabled checked /> |
-| Read Finding | <input type="checkbox" disabled checked /> | <input type="checkbox" disabled /> | <input type="checkbox" disabled /> |
-: **Finding** permissions {.hover tbl-colwidths="[40,20,20,20]"}
+| Delete Artifact | <input type="checkbox" disabled checked /> | <input type="checkbox" disabled /> | <input type="checkbox" disabled /> |
+| Add Artifact | <input type="checkbox" disabled checked /> | <input type="checkbox" disabled /> | <input type="checkbox" disabled checked /> |
+| Add Artifact Comment | <input type="checkbox" disabled checked /> | <input type="checkbox" disabled checked /> | <input type="checkbox" disabled checked /> |
+| Update Artifact | <input type="checkbox" disabled checked /> | <input type="checkbox" disabled /> | <input type="checkbox" disabled checked /> |
+| Read Artifact | <input type="checkbox" disabled checked /> | <input type="checkbox" disabled /> | <input type="checkbox" disabled /> |
+: **Artifact** permissions {.hover tbl-colwidths="[40,20,20,20]"}
 
 
 <!-- FOOTNOTES -->
