--- a/site/guide/model-inventory/_view-model-activity-overview.qmd
+++ b/site/guide/model-inventory/_view-model-activity-overview.qmd
@@ -5,7 +5,7 @@
 - Model stage transitions^[[Manage model stages](/guide/workflows/manage-model-stages.qmd)]
 - Updates to model documentation, validation reports,^[[Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)] or ongoing monitoring plans^[[Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)]
 - Test results added to your model^[[{{< var validmind.developer >}}](/developer/validmind-library.qmd)]
-- Findings added, updated, or removed^[[Working with artifacts](/guide/model-validation/working-with-artifacts.qmd)]
+- Artifacts added, updated, or removed^[[Working with artifacts](/guide/model-validation/working-with-artifacts.qmd)]
 - Comment creation and replies^[[Commenting](/guide/model-documentation/collaborate-with-others.qmd#commenting)]
 
 ::::
@@ -15,7 +15,7 @@
 - Model stage transitions
 - Updates to model documentation, validation reports, or ongoing monitoring plans
 - Test results added to your model
-- Findings added, updated, or removed
+- Artifacts added, updated, or removed
 - Comment creation and replies
 
 ::::
