--- a/site/guide/model-inventory/archive-delete-models.qmd
+++ b/site/guide/model-inventory/archive-delete-models.qmd
@@ -9,7 +9,7 @@ Archive models within the model inventory when they are decommissioned or delete
 ## By default, only the Customer Admin role[^1] can access archived models.
 
 - Archived models are read-only, and do not contribute to sub-data, statistics or reports. 
-- Findings from archived models will not be displayed, and reports will not include data from archived models.
+- Artifacts from archived models will not be displayed, and reports will not include data from archived models.
 :::
 
 ::: {.attn}
