--- a/site/guide/model-inventory/view-model-activity.qmd
+++ b/site/guide/model-inventory/view-model-activity.qmd
@@ -55,7 +55,7 @@ Shows model level updates:
 
 - Inventory fields updated on the model[^4]
 - Updates to model documentation, validation reports,[^5] or ongoing monitoring plans[^6]
-- Findings added, updated, or removed[^7]
+- Artifacts added, updated, or removed[^7]
 
 #### Test Results
 
