--- a/site/guide/model-validation/_view-all-artifacts.qmd
+++ b/site/guide/model-validation/_view-all-artifacts.qmd
@@ -45,7 +45,7 @@ In the left sidebar, click **{{< fa triangle-exclamation >}} Validation Issues**
 
 To view a list of validation issues across all models:
 
-1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings**.
+1. In the left sidebar, click **{{< fa triangle-exclamation >}} Validation Issues**.
 
     [Filter this list](/guide/model-validation/view-filter-artifacts.qmd#filter-and-sort-artifacts){target="_blank"} to include only validation issues you want to see, or [toggle visibilty for column headers](/guide/model-validation/customize-artifact-layouts.qmd){target="_blank"}.
 
@@ -66,7 +66,7 @@ To view a list of validation issues across all models:
 
 To view lists of other artifact types across all models:
 
-1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings**.
+1. In the left sidebar, click **{{< fa border-all >}} Artifacts**.
 
 1. Select an [artifact type](/guide/model-validation/manage-artifact-types.qmd){target="_blank"} to view from the tabs:
 
