--- a/site/guide/model-validation/view-filter-artifacts.qmd
+++ b/site/guide/model-validation/view-filter-artifacts.qmd
@@ -113,7 +113,7 @@ To narrow down artifacts, you can apply some filters:
 
 :::
 
-Filters can be removed by clicking on the {{< fa xmark >}} next to them on the main **{{< fa triangle-exclamation >}} Findings** page where the results are displayed.
+Filters can be removed by clicking on the {{< fa xmark >}} next to them where the results are displayed.
 
 
 <!-- FOOTNOTES -->
