--- a/site/guide/model-validation/working-with-artifacts.qmd
+++ b/site/guide/model-validation/working-with-artifacts.qmd
@@ -49,7 +49,7 @@ model interpretability
 
 
 validation results
-: Findings from testing the model on unseen data, for example cross-validation results.
+: Artifacts from testing the model on unseen data, for example cross-validation results.
 
 residual analysis
 : Investigating the errors or discrepancies between predicted and actual outcomes.
