--- a/site/guide/reporting/_create-a-visualization.qmd
+++ b/site/guide/reporting/_create-a-visualization.qmd
@@ -19,11 +19,10 @@ a. Select a **[visualization type]{.smallcaps}**:
 
 a. Select a **[dataset]{.smallcaps}**:
 
-    - **Findings** — All artifact types logged on models.^[[Working with artifacts](/guide/model-validation/working-with-artifacts.qmd)]
+    - **Artifact - Model Limitations** — Logged Model Limitation type artifacts only.^[[Working with artifacts](/guide/model-validation/working-with-artifacts.qmd)]
+    - **Artifact - Policy Exceptions** — Logged Policy Exception type artifacts only.^[[Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)]
+    - **Artifact - Validation Issues** — Logged Validation Issue type artifacts only.
     - **Inventory Models** — Models logged in your inventory.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)]
-    - **Model Limitations** — Logged Model Limitation type artifacts only.^[[Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)]
-    - **Policy Exceptions** — Logged Policy Exception type artifacts only.
-    - **Validation Issues** — Logged Validation Issue type artifacts only.
 
 a. Select the visualization configuration options to apply to the dataset.^[[Visualization configuration options](/guide/reporting/manage-custom-reports.qmd#visualization-configuration-options)]
 
@@ -68,11 +67,10 @@ a. Select a **[visualization type]{.smallcaps}**:
 
 a. Select a **[dataset]{.smallcaps}**:
 
-    - **Findings** — [All artifact types logged on models](/guide/model-validation/working-with-artifacts.qmd){target="_blank"}.
+    - **Artifact - Model Limitations** — Logged Model Limitation type [artifacts](/guide/model-validation/working-with-artifacts.qmd){target="_blank"}. only.
+    - **Artifact - Policy Exceptions** — Logged Policy Exception type artifacts only.
+    - **Artifact - Validation Issues** — Logged Validation Issue type artifacts only.
     - **Inventory Models** — [Models logged in your inventory](/guide/model-inventory/working-with-model-inventory.qmd){target="_blank"}.
-    - **Model Limitations** — Logged Model Limitation type artifacts only.
-    - **Policy Exceptions** — Logged Policy Exception type artifacts only.
-    - **Validation Issues** — Logged Validation Issue type artifacts only.
 
 a. Select the [visualization configuration options](/guide/reporting/manage-custom-reports.qmd#visualization-configuration-options){target="_blank"} to apply to the dataset.
 
