--- a/site/guide/reporting/export-artifacts.qmd
+++ b/site/guide/reporting/export-artifacts.qmd
@@ -36,7 +36,7 @@ Export tracked model artifacts as comma-delimited tables (`.csv`).
 
 #### Export all other artifact types
 
-1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings** for lists of other artifact types across all models:
+1. In the left sidebar, click **{{< fa border-all >}} Artifacts** to view lists of other artifact types across all models.
 
 2. Select an artifact type[^5] to export from the tabs:
 
