--- a/site/guide/model-validation/_add-artifacts-on-documentation.qmd
+++ b/site/guide/model-validation/_add-artifacts-on-documentation.qmd
@@ -32,7 +32,7 @@
 
     <!-- Either log an artifact on this overview page, or via a specific documentation section. Both methods will allow you to associate an artifact with a documentation section.  -->
 
-1. On your model's Documentation page, click **{{< fa plus >}} Add Model Finding**.
+1. On your model's Documentation page, click **{{< fa plus >}} Add Model Artifact**.
 
 1. Select the [artifact type](/guide/model-validation/manage-artifact-types.qmd){target="_blank"} you want to add:
 
@@ -40,7 +40,7 @@
    - Policy Exception
    - Model Limitation
 
-1. On the Add Model Finding modal that opens, provide information for your artifact.
+1. On the modal that opens, provide information for your artifact.
 
 1. When you are done, click **Save** to submit the artifact. 
 
