--- a/site/guide/workflows/_review-active-workflows.qmd
+++ b/site/guide/workflows/_review-active-workflows.qmd
@@ -19,7 +19,7 @@ To review details for workflows currently active:
 
     - **Details** — Name and description (if present) of the workflow, the workflow's status and progress (if applicable), when it was created, and when it was started.
     - **Activity** — History of updates to the workflow on that model, including notes submitted during transitions.[^notes]
-    - **Findings** — Findings for that model created within the duration of that workflow's runtime.
+    - **Artifacts** — Artifacts for that model created within the duration of that workflow's runtime.
     - **Workflow**^[Hover over a workflow step to view an animation of the steps connecting to and from that step.] — Overview of the entire workflow. The current workflow step is highlighted on this view.
 
 #### On artifacts
@@ -65,7 +65,7 @@ To review details for workflows currently active on models:
 
     - **Details** — Name and description (if present) of the workflow, the workflow's status and progress (if applicable), when it was created, and when it was started.
     - **Activity** — History of updates to the workflow on that model, including notes submitted during transitions.
-    - **Findings** — Findings for that model created within the duration of that workflow's runtime.
+    - **Artifacts** — Artifacts for that model created within the duration of that workflow's runtime.
     - **Workflow** — Overview of the entire workflow. The current workflow step is highlighted on this view.
 
 ::::
@@ -88,7 +88,7 @@ To review details for workflows currently active:
 
     - **Details** — Name and description (if present) of the workflow, the workflow's status and progress (if applicable), when it was created, and when it was started.
     - **Activity** — History of updates to the workflow on that model, including notes submitted during transitions.
-    - **Findings** — Findings for that model created within the duration of that workflow's runtime.
+    - **Artifacts** — Artifacts for that model created within the duration of that workflow's runtime.
     - **Workflow** — Overview of the entire workflow. The current workflow step is highlighted on this view.
 
 #### On artifacts
