--- a/site/guide/attestation/complete-attestation-questionnaires.qmd
+++ b/site/guide/attestation/complete-attestation-questionnaires.qmd
@@ -34,7 +34,8 @@ When prompted on your dashboard:
    Alternatively, you can access attestations pending your action by clicking **{{< fa clipboard-check >}} Attestations** in these pages:
 
    - **{{< fa cubes >}} Inventory**
-   - **{{< fa triangle-exclamation >}} Findings**
+   - **{{< fa triangle-exclamation >}} Validation Issues**
+   - **{{< fa border-all >}} Artifacts** 
 
 2. In the right sidebar:
 
