--- a/site/guide/model-validation/view-filter-artifacts.qmd
+++ b/site/guide/model-validation/view-filter-artifacts.qmd
@@ -98,7 +98,7 @@ To narrow down artifacts, you can apply some filters:
 
 ### Filter all other artifacts
 
-1. In the left sidebar, click **{{< fa border-all >}} Artifacts** to view lists of other artifact types across all models.
+1. In the left sidebar, click  v to view lists of other artifact types across all models.
 
 2. Select an artifact type[^9] to view from the tabs:
 
