--- a/site/guide/attestation/review-attestation-questionnaires.qmd
+++ b/site/guide/attestation/review-attestation-questionnaires.qmd
@@ -40,7 +40,8 @@ When prompted on your dashboard:
    Alternatively, you can access attestations pending your action by clicking **{{< fa clipboard-check >}} Attestations** in these pages:
 
    - **{{< fa cubes >}} Inventory**
-   - **{{< fa triangle-exclamation >}} Findings**
+   - **{{< fa triangle-exclamation >}} Validation Issues**
+   - **{{< fa border-all >}} Artifacts** 
 
 2. If shown in the right sidebar, click an attestation instance in the [**{{< fa clipboard-check >}} Ready For Review**]{.bubble} state.
 
@@ -96,7 +97,8 @@ Following your review of an attestation questionnaire[^5] or when prompted on yo
    Alternatively, you can access attestations pending your action by clicking **Attestations** in these pages:
 
    - **{{< fa cubes >}} Inventory**
-   - **{{< fa triangle-exclamation >}} Findings**
+   - **{{< fa triangle-exclamation >}} Validation Issues**
+   - **{{< fa border-all >}} Artifacts**
 
 2. In the right sidebar:
 
