Docs -training: Findings scrub

--- a/site/guide/attestation/review-attestation-questionnaires.qmd
+++ b/site/guide/attestation/review-attestation-questionnaires.qmd
@@ -62,10 +62,10 @@ When prompted on your dashboard:
    - Check the comments for accuracy and relevance.
 
    ::: {.callout}
-   Refer to the model snapshot to ensure the attestation questionnaire is accurate:
+   Refer to the filtered views to ensure the attestation questionnaire is accurate:
 
    - **{{< fa cubes >}} Inventory** — Shows model information and recent activity such as comments, status changes, updates and test results.
-   - **{{< fa triangle-exclamation >}} Findings** — Shows model artifacts with details like title, severity, status, and due date.
+   - **{{< fa border-all >}} Artifacts** — Shows model artifacts with details like title, severity, status, and due date.
    :::
 
 5. Accept or reject the attestation questionnaire:
