--- a/site/guide/attestation/complete-attestation-questionnaires.qmd
+++ b/site/guide/attestation/complete-attestation-questionnaires.qmd
@@ -53,10 +53,10 @@ When prompted on your dashboard:
    - Adding relevant comments
 
    ::: {.callout}
-   Refer to the model snapshot to ensure the attestation questionnaire is accurate:
+   Refer to the filtered views to ensure the attestation questionnaire is accurate:
 
    - **{{< fa cubes >}} Inventory** — Shows model information and recent activity such as comments, status changes, updates and test results.
-   - **{{< fa triangle-exclamation >}} Findings** — Shows model artifacts with details like title, severity, status, and due date.
+   - **{{< fa border-all >}} Artifacts** — Shows model artifacts with details like title, severity, status, and due date.
    :::
 
 5. Verify that your answers are complete and click **Submit for Review**.
