Expand AWS SageMaker example

--- a/site/guide/integrations/integrations-examples.qmd
+++ b/site/guide/integrations/integrations-examples.qmd
@@ -216,10 +216,16 @@ curl -X POST https://api.prod.vm.validmind.ai/vm/api/v1/webhooks/xxxxxxxxxxxxxxx
 
 ### Synchronize models with AWS SageMaker
 
-To synchronize models registered in the {{< var vm.product >}} model inventory with AWS SageMaker models:
+::: {.column-margin}
+![Connect with AWS SageMaker](integrations-examples-aws-sagemaker.png){width=80% fig-alt="Screenshot of the AWS Sagemaker connection configured to synchronize models, showing the required fields described in step 5." .screenshot}
+:::
+
+To synchronize models registered in the {{< var vm.product >}} model inventory with AWS SageMaker models, you need to first configure the connection and then link the models:
+
+#### Configure the connection
 
 ::: {.column-margin}
-![Sync with AWS SageMaker](integrations-examples-aws-sagemaker.png){width=80% fig-alt="Screenshot of the AWS Sagemaker connection configured to synchronize models, showing the required fields described in step 5." .screenshot}
+![A linked AWS SageMaker model](integrations-examples-aws-sagemaker-linked-model.png){width=60% fig-alt="Screenshot of the model linked to AWS SageMaker, showing the required fields described in step 4." .screenshot}
 :::
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
@@ -248,6 +254,28 @@ To synchronize models registered in the {{< var vm.product >}} model inventory w
 
     If the test is successful, the message **{{< fa check-circle >}} Connection successful** displays.
 
+
+#### Link the models
+
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+
+2. Select a model by clicking on it or find your model by applying a filter or searching for it.[^13]
+
+3. Scroll down until you locate the **Amazon Sagemaker** box in the right sidebar.
+
+4. Hover over the Amazon SageMaker box.
+
+5. When the **{{< fa ellipsis-vertical >}}** menu appears, click on it and select **{{< fa link >}} Link Model**.
+
+6. In the modal that opens, click the [select model]{.smallcaps} dropdown to pick the AWS SageMaker model to link.
+
+7. Optional: Click **Test Connection** to ensure the connection is working as expected.
+
+    If the test is successful, the message **{{< fa check-circle >}} Connection Test Successful** displays.
+
+8. Click **Link Model**.
+
+
 <!-- FOOTNOTES -->
 
 [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
@@ -273,6 +301,8 @@ To synchronize models registered in the {{< var vm.product >}} model inventory w
 [^11]: [Add new workflows](/guide/workflows/configure-workflows.qmd#add-new-workflows)
 
 [^12]: [Workflow step types](/guide/workflows/workflow-step-types.qmd#webhook)
+
+[^13]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
 <!-- HERE -->
 
