Update SageMaker example and add topic about linking models

--- a/site/guide/integrations/integrations-examples.qmd
+++ b/site/guide/integrations/integrations-examples.qmd
@@ -261,7 +261,7 @@ To synchronize models registered in the {{< var vm.product >}} model inventory w
 
 2. Select a model by clicking on it or find your model by applying a filter or searching for it.[^13]
 
-3. Scroll down until you locate the **Amazon Sagemaker** box in the right sidebar.
+3. Scroll down until you locate the **Amazon Sagemaker** connection box in the right sidebar.
 
 4. Hover over the Amazon SageMaker box.
 
