--- a/site/guide/integrations/managing-integrations.qmd
+++ b/site/guide/integrations/managing-integrations.qmd
@@ -11,6 +11,7 @@ listing:
     contents:
       - manage-secrets.qmd 
       - configure-connections.qmd
+      - linking-external-models.qmd
       - integrations-examples.qmd
 ---
 
