Training: finding & Finding scrub

--- a/site/training/administrator-fundamentals/onboarding-your-organization.qmd
+++ b/site/training/administrator-fundamentals/onboarding-your-organization.qmd
@@ -88,7 +88,7 @@ From here, you can:
 - Manage your organization's custom setup, including inventory fields and reusable templates and blocks ...
 - Manage users and user access to features ...
 - Set up workflows and attestations to streamline the governance of your models ...
-- View analytics on your models and findings, and create custom reports ...
+- View analytics on your models and artifacts (findings), and create custom reports ...
 - ... and much more!
 
 ::: {.embed}
