--- a/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
+++ b/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
@@ -122,7 +122,7 @@ Review workflows
 
 ::: {.column width="70%" .bl .pl4 .f4}
 
-Review workflows associated with your models or findings:
+Review workflows associated with your models or artifacts:
 
 ::: {.panel-tabset}
 ### Review active workflows
@@ -162,7 +162,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 :::: {.slideover--r .three-quarters .auto-collapse-10}
 **Welcome to {{< fa square-poll-vertical >}} Analytics**
 
-Here, you can find executive summaries, track information on models, findings, and more.
+Here, you can find executive summaries, track information on models, artifacts, and more.
 
 ::: {.embed}
 Default report widgets are provided in the **Models** and **Validation Issues** dashboards.
@@ -188,7 +188,7 @@ View report data
 <br>Try it **live** on the next page. {{< fa hand-point-right >}}
 
 :::: {.f4 .pr3 .pl3 .mt4 .embed}
-Reports will not include data or findings from [archived models](/guide/model-inventory/archive-delete-models.qmd){target="_blank"}.
+Reports will not include data or artifacts from [archived models](/guide/model-inventory/archive-delete-models.qmd){target="_blank"}.
 :::
 :::
 
