--- a/site/training/developer-fundamentals/finalizing-model-documentation.qmd
+++ b/site/training/developer-fundamentals/finalizing-model-documentation.qmd
@@ -328,7 +328,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 :::: {.slideover--l .three-quarters .auto-collapse-10}
 **Welcome to {{< fa square-poll-vertical >}} Analytics**
 
-Here, you can find executive summaries, track information on models, findings, and more.
+Here, you can find executive summaries, track information on models, artifacts, and more.
 
 For example:
 
