--- a/site/training/program/learning-paths.qmd
+++ b/site/training/program/learning-paths.qmd
@@ -122,7 +122,7 @@ Learn how to use {{< var vm.product >}} as a **validator** to generate validatio
 
 - Initialize models for use with the {{< var validmind.developer >}}
 - Run and log out-of-the box and custom tests for your models
-- Use the results of tests to log model findings
+- Use the results of tests to log model artifacts (findings)
 
 :::
 
@@ -131,7 +131,7 @@ Learn how to use {{< var vm.product >}} as a **validator** to generate validatio
 
 - Make qualitative edits to your validation report
 - Submit your validation report for approval
-- Track finding resolution and other updates to your model
+- Track artifact resolution and other updates to your model
 
 :::
 
@@ -168,7 +168,7 @@ Learn how to use {{< var vm.product >}} as an **administrator** to onboard your 
 ::: {.w-50-ns}
 #### <sup>Module 2</sup><br> Customizing Your Model Inventory
 
-- Configure model inventory & finding fields
+- Configure model inventory & artifact (finding) fields
 - Customize document templates
 - Configure reusable blocks
 
@@ -359,7 +359,7 @@ Learn how to navigate the {{< var vm.product >}}'s key features and understand h
 
 - Create and manage validation reports <!-- {{< fa check >}} -->
 - Learn to assess compliance and link evidence <!-- {{< fa check >}} -->
-- Create and track findings with severity and due dates <!-- {{< fa check >}} -->
+- Create and track artifacts (findings) with severity and due dates <!-- {{< fa check >}} -->
 - Use collaboration features for developer-validator interaction <!-- {{< fa check >}} -->
 :::
 
