--- a/site/training/validator-fundamentals/finalizing-validation-reports.qmd
+++ b/site/training/validator-fundamentals/finalizing-validation-reports.qmd
@@ -30,7 +30,7 @@ skip_preview: true
 
 # Learning objectives {.center}
 
-_"As a **validator** who has logged validation tests with the {{< var validmind.developer >}} to the {{< var validmind.platform >}}, I want to refine my model's validation report, submit my validation report for approval, and track finding resolution and other updates to my model."_
+_"As a **validator** who has logged validation tests with the {{< var validmind.developer >}} to the {{< var validmind.platform >}}, I want to refine my model's validation report, submit my validation report for approval, and track artifact (finding) resolution and other updates to my model."_
 
 ::: {.tc}
 <br>
@@ -49,7 +49,7 @@ This final module is part of a four-part series:
 ### Section 1
 
 - [Refine validation report](#refine-validation-report)
-- [Manage model findings](#manage-model-findings)
+- [Manage artifacts](#manage-artifacts)
 - [Submit validation report for approval](#submit-report-for-approval)
 
 :::
@@ -250,13 +250,13 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 :::
 
-# Manage model findings {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Manage artifacts {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {.scrollable}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Add more findings
+Add more artifacts
 
 ::: {.f5 .nt2 .pl2 .mb4}
 (Scroll down for the full instructions.)
@@ -275,17 +275,17 @@ Try it **live** on the next pages. {{< fa hand-point-right >}}
 
 ::: {.column width="70%" .bl .pl4 .f4}
 
-Along with adding findings directly via validation reports, you can also add findings during your review of documentation:
+Along with adding artifacts directly via validation reports, you can also add artifacts during your review of documentation:
 
 {{< include /guide/model-validation/_add-artifacts-on-documentation.qmd >}}
 
 <!-- ::: {.panel-tabset}
 
-### Add finding via overview
+### Add artifact via overview
 
 {{< include /guide/model-validation/_add-finding-via-overview.qmd >}}
 
-### Add finding via section
+### Add artifact via section
 
 {{< include /guide/model-validation/_add-finding-via-section.qmd >}}
 
@@ -298,14 +298,14 @@ Along with adding findings directly via validation reports, you can also add fin
 
 :::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
-**Add a finding on documentation**
+**Add an artifact on documentation**
 
-<!-- **Add a finding via overview** -->
+<!-- **Add an artifact via overview** -->
 :::
 
 1. Select the name of your model you registered for this course to open up the model details page.
 2. On the left sidebar that appears for your model, click **Documentation** under {{< fa file >}} Documents.
-3. Click **{{< fa plus >}} Add Model Finding** to add a finding from the overview.
+3. Click **{{< fa plus >}} Add Model Artifact** to add an artifact from the overview.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -315,12 +315,12 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 :::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
-**Add a finding via section**
+**Add an artifact via section**
 :::
 
 1. Select the name of your model you registered for this course to open up the model details page.
 2. On the left sidebar that appears for your model, click **Documentation** under {{< fa file >}} Documents.
-3. Click on any section heading to expand and add a finding to that section via the **{{< var vm.product >}} Insights™** panel.
+3. Click on any section heading to expand and add an artifact to that section via the **{{< var vm.product >}} Insights™** panel.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -344,17 +344,17 @@ Track issue resolution
 :::
 
 ::: {.column width="70%" .bl .pl4 .f4}
-As you prepare your report, review open or past due findings, close resolved ones, or add a mitigation plan:
+As you prepare your report, review open or past due artifacts, close resolved ones, or add a mitigation plan:
 
 ::: {.panel-tabset}
 
-### Update a model finding
+### Update an artifact
 
 {{< include /guide/model-validation/_track-artifact-resolution.qmd >}}
 
-### View all model findings
+### View all artifacts
 
-Along with model-specific findings, you can also view and filter a list of findings across all models within the {{< var validmind.platform >}}:
+Along with model-specific artifacts, you can also view and filter a list of artifacts across all models within the {{< var validmind.platform >}}:
 
 {{< include /guide/model-validation/_view-all-artifacts.qmd >}}
 
@@ -367,26 +367,26 @@ Along with model-specific findings, you can also view and filter a list of findi
 
 :::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
-**Update a model finding**
+**Update your validation issue**
 :::
 
 1. Select the name of your model you registered for this course to open up the model details page.
-2. In the left sidebar that appears for your model, click **{{< fa triangle-exclamation >}} Model Findings**.
-3. Select one of the findings you logged during this course, and make some changes to any of the fields.
-4. When you are finished editing, set the finding **[status]{.smallcaps}** to `Closed`.
+2. In the left sidebar that appears for your model, click **{{< fa triangle-exclamation >}} Validation Issues**.
+3. Select the validation issue you logged during this course, and make some changes to any of the fields.
+4. When you are finished editing, set the valildation issue **[status]{.smallcaps}** to `Closed`.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 :::
 
-## {background-iframe="https://app.prod.validmind.ai/model-findings" background-interactive="true" data-preload="yes"}
+## {background-iframe="https://app.prod.validmind.ai/validation-issues" background-interactive="true" data-preload="yes"}
 
 :::: {.slideover--b .three-quarters .auto-collapse-10}
 ::: {.tc}
-**View all {{< fa triangle-exclamation >}} Model Findings**
+**View all {{< fa triangle-exclamation >}} Validation Issues**
 :::
 
-Filter this list to include only findings you want to see, or toggle visibilty for column headers.
+Filter this list to include only validation issues you want to see, or toggle visibilty for column headers.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -462,12 +462,12 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 :::: {.slideover--l .three-quarters .auto-collapse-10}
 **Welcome to {{< fa square-poll-vertical >}} Analytics**
 
-Here, you can find executive summaries, track information on models, findings, and more.
+Here, you can find executive summaries, track information on models, artifacts, and more.
 
 For example:
 
-1. Click **Findings** to review reports on findings.
-3. Click into any widget to review the findings reported by that widget.
+1. Click **Validation Issues** to review reports on validation issues.
+3. Click into any widget to review the validation issues reported by that widget.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -494,7 +494,7 @@ In this final module, you learned how to:
 
 - [x] Add or edit content blocks in your validation report
 - [x] Assess the compliance of a model within your validation report
-- [x] Manage model findings via multiple methods
+- [x] Manage artifacts via multiple methods
 - [x] Submit your validation report for approval
 - [x] Collaborate with other stakeholders on your model
 - [x] Track updates on your model
