--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -137,8 +137,8 @@ From here, you can:
 
 - Keep track of your models in the customizable inventory ...
 - Review model documentation submitted by model developers ...
-- Assess the compliance of models by logging findings and test results as evidence on validation reports ...
-- View analytics on your models and findings, and create custom reports ...
+- Assess the compliance of models by logging artifacts (findings) and test results as evidence on validation reports ...
+- View analytics on your models and artifacts, and create custom reports ...
 - ... and much more!
 
 ::: {.embed}
