--- a/site/training/validator-fundamentals/validator-fundamentals-register.qmd
+++ b/site/training/validator-fundamentals/validator-fundamentals-register.qmd
@@ -29,13 +29,13 @@ listing:
     - path: developing-challenger-models.html
       title: "Developing Challenger Models"
       subtitle: "Module 3"
-      description: "{{< fa check >}} Initialize models for use with the {{< var validmind.developer >}} <br> {{< fa check >}} Run and log out-of-the box and custom tests for your models <br> {{< fa check >}} Use the results of tests to log model findings"
+      description: "{{< fa check >}} Initialize models for use with the {{< var validmind.developer >}} <br> {{< fa check >}} Run and log out-of-the box and custom tests for your models <br> {{< fa check >}} Use the results of tests to log model artifacts (findings)"
       reading-time: "60"
       author: "{{< var vm.product >}}"
     - path: finalizing-validation-reports.html
       title: "Finalizing Validation Reports"
       subtitle: "Module 4"
-      description: "{{< fa check >}} Make qualitative edits to your validation report <br> {{< fa check >}} Submit your validation report for approval <br> {{< fa check >}} Track finding resolution and other updates to your model"
+      description: "{{< fa check >}} Make qualitative edits to your validation report <br> {{< fa check >}} Submit your validation report for approval <br> {{< fa check >}} Track artifact resolution and other updates to your model"
       reading-time: "25"
       author: "{{< var vm.product >}}"
     fields: [title, subtitle, description, reading-time]
