--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -272,7 +272,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Manage model finding fields
+Manage artifact (finding) fields
 
 ::: {.tc}
 [Learn more ...](/guide/model-validation/manage-artifact-fields.qmd){.button target="_blank"}
@@ -287,11 +287,11 @@ Manage model finding fields
 
 ::: {.panel-tabset}
 
-### Add or edit finding fields
+### Add or edit artifact fields
 
 {{< include /guide/model-validation/_add-edit-artifact-fields.qmd >}}
 
-### Finding field types
+### Artifact field types
 
 ::: {.f4}
 
@@ -309,12 +309,12 @@ Manage model finding fields
 
 :::: {.slideover--l .three-quarters .auto-collapse-10}
 ::: {.tc}
-**Add a finding field**
+**Add an artifact field**
 :::
 
 1. Click **{{< fa plus >}} Add Field**.
 2. Select the field **[type]{.smallcaps}** and enter a **[name]{.smallcaps}**.
-3. Select the **[finding types]{.smallcaps}** this field is available on.
+3. Select the **[artifact types]{.smallcaps}** this field is available on.
 4. Click **Save** to add your field.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
@@ -325,7 +325,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Manage finding severities
+Manage artifact severities
 
 ::: {.tc}
 [Learn more ...](/guide/model-validation/manage-artifact-severities.qmd){.button target="_blank"}
@@ -340,11 +340,11 @@ Manage finding severities
 
 ::: {.panel-tabset}
 
-### Add finding severities
+### Add artifact severities
 
 {{< include /guide/model-validation/_add-artifact-severities.qmd >}}
 
-### Reorder finding severities
+### Reorder artifact severities
 
 {{< include /guide/model-validation/_reorder-artifact-severities.qmd >}}
 
@@ -358,10 +358,10 @@ Manage finding severities
 
 :::: {.slideover--l .three-quarters .auto-collapse-10}
 ::: {.tc}
-**Add a finding severity**
+**Add an artifact severity**
 :::
 
-1. Click **{{< fa plus >}} Add Finding Severity**.
+1. Click **{{< fa plus >}} Add Artifact Severity**.
 2. Enter a **[name]{.smallcaps}** and select a **[color]{.smallcaps}** for the severity.
 3. Click **Add Severity** to create the severity.
 4. Once added, reorder the severities as required.
