Edited link to notebook

--- a/site/training/validator-fundamentals/developing-challenger-models.qmd
+++ b/site/training/validator-fundamentals/developing-challenger-models.qmd
@@ -327,7 +327,7 @@ Log an artifact (finding)
 :::
 
 ::: {.tc}
-[Learn more ...](/notebooks/EXECUTED/model_validation/3-developing_challenger_model.html#log-a-model-finding){.button target="_blank"}
+[Learn more ...](/notebooks/EXECUTED/model_validation/3-developing_challenger_model.html#log-an-artifact){.button target="_blank"}
 
 :::
 
