Missed links in releases somehow

--- a/site/releases/2024/2024-dec-06/release-notes.qmd
+++ b/site/releases/2024/2024-dec-06/release-notes.qmd
@@ -599,7 +599,7 @@ You can now annotate attachments uploaded to both models or model findings, allo
 ::: {.w-40-ns .tc}
 [Edit model inventory fields](/guide/model-inventory/edit-model-inventory-fields.qmd#manage-supporting-documentation){.button}
 
-[Add and manage model findings](/guide/model-validation/add-manage-model-findings.qmd#manage-supporting-documentation){.button}
+[Add and manage model findings](/guide/model-validation/add-manage-model-artifacts.qmd#manage-supporting-documentation){.button}
 
 :::
 
@@ -988,7 +988,7 @@ Our reference material on model findings has been expanded to include key concep
 :::
 
 ::: {.w-30-ns .tc}
-[Working with model findings](/guide/model-validation/working-with-model-findings.qmd){.button}
+[Working with model findings](/guide/model-validation/working-with-artifacts.qmd){.button}
 
 :::
 
@@ -1118,7 +1118,7 @@ Labels: documentation
 :::
 
 ::: {.w-25-ns}
-[Track issue resolution](/guide/model-validation/add-manage-model-findings.qmd#track-issue-resolution){.button}
+[Track issue resolution](/guide/model-validation/add-manage-artifacts#track-artifact-resolution){.button}
 
 :::
 
