--- a/site/releases/2024/2024-may-22/release-notes.qmd
+++ b/site/releases/2024/2024-may-22/release-notes.qmd
@@ -656,7 +656,7 @@ You can now associate model findings with sections within your model documentati
 :::
 
 ::: {.w-30-ns .tc}
-[Add model findings](/guide/model-validation/add-manage-model-findings.qmd#add-model-findings){.button}
+[Add model findings](/guide/model-validation/add-manage-artifacts.qmd#add-artifacts){.button}
 
 :::
 
@@ -778,7 +778,7 @@ We created a new **Validation Report** overview page which shows a section-by-se
 ::: {.w-30-ns}
 [Preparing validation reports](/guide/model-validation/preparing-validation-reports.qmd){.button}
 
-[Working with model findings](/guide/model-validation/working-with-model-findings.qmd){.button}
+[Working with model findings](/guide/model-validation/working-with-artifacts.qmd){.button}
 
 :::
 
