--- a/site/releases/2024/2024-oct-22/release-notes.qmd
+++ b/site/releases/2024/2024-oct-22/release-notes.qmd
@@ -335,7 +335,7 @@ You can now manage attachments within findings.
 :::
 
 ::: {.w-40-ns .tc}
-[Manage supporting documentation](/guide/model-validation/add-manage-model-findings.qmd#manage-supporting-documentation){.button}
+[Manage supporting documentation](/guide/model-validation/add-manage-artifacts.qmd#manage-supporting-documentation){.button}
 :::
 
 ::::
@@ -387,7 +387,7 @@ You can now delete findings as a validator.
 :::
 
 ::: {.w-40-ns .tl}
-[Delete model findings](/guide/model-validation/add-manage-model-findings.qmd#delete-model-findings){.button}
+[Delete model findings](/guide/model-validation/add-manage-artifacts#delete-artifacts){.button}
 :::
 
 ::::
