--- a/site/releases/2024/2024-mar-27/highlights.qmd
+++ b/site/releases/2024/2024-mar-27/highlights.qmd
@@ -143,7 +143,7 @@ The same customization is available on the **{{< fa triangle-exclamation >}} Fin
 :::
 
 ::: {.w-30-ns}
-[View model findings](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings){.button .button-green}
+[View model findings](/guide/model-validation/view-filter-artifacts.qmd#view-artifacts){.button .button-green}
 
 :::
 
