--- a/site/guide/integrations/integrations-examples.qmd
+++ b/site/guide/integrations/integrations-examples.qmd
@@ -221,9 +221,8 @@ curl -X POST https://api.prod.vm.validmind.ai/vm/api/v1/webhooks/xxxxxxxxxxxxxxx
 :::
 
 To synchronize models registered in the {{< var vm.product >}} model inventory with AWS SageMaker models, you need to first configure the connection and then link the models:
-::: {.panel-tabset}
 
-#### a. Configure the connection
+#### Configure the connection
 
 ::: {.column-margin}
 ![A linked AWS SageMaker model](integrations-examples-aws-sagemaker-linked-model.png){width=60% fig-alt="Screenshot of the model linked to AWS SageMaker, showing the required fields described in step 4." .screenshot}
@@ -256,7 +255,7 @@ To synchronize models registered in the {{< var vm.product >}} model inventory w
     If the test is successful, the message **{{< fa check-circle >}} Connection successful** displays.
 
 
-#### b. Link the models
+#### Link the models
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
@@ -275,8 +274,6 @@ To synchronize models registered in the {{< var vm.product >}} model inventory w
     If the test is successful, the message **{{< fa check-circle >}} Connection Test Successful** displays.
 
 8. Click **Link Model**.
-
-:::
 
 <!-- FOOTNOTES -->
 
